--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.0
+  intl: ^0.19.0
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
